--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 
     <div class="info-box">
         <h2>Hobbies</h2>
-        <p>Playing video games</p>
+        <p>Playing video games and reading</p>
     </div>
 
     <div class="info-box">
         <h2>Favorite Food</h2>
-        <p>Burgers</p>
+        <p>Chilaquiles</p>
     </div>
 
     <div class="info-box">
         <h2>Fun Fact</h2>
-        <p>Mario once spent an entire day playing a video game without taking a break!</p>
+        <p>I was in my High School's Academic Decathlon team.</p>
     </div>
 </div>
 
